MODON MRE BPDEV/force-app/main/default/objects/EOI_Public_Registration__c/EOI_Public_Registration__c.object-meta.xml
<CustomObject>
    <description>Captures one row per public Expression of Interest submission from a Modon project microsite (e.g. Hudayriyat Golf Estates and future launches). Holds the registrant&apos;s identity, residence selection, and OTP verification proof. Internal team later promotes each registration into the existing Lead / Opportunity / Expressionofinterest__c chain via a back-office action.</description>
    <label>EOI Public Registration</label>
    <nameField>
        <displayFormat>EPR-{0000000}</displayFormat>
        <label>Registration Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>EOI Public Registrations</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>