MODON MRE BPDEV/force-app/main/default/objects/EOI_Public_Registration__c/fields/AdName__c.field-meta.xml
<CustomField>
    <fullName>AdName__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Ad Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>