MODON MRE BPDEV/force-app/main/default/objects/EOI_Public_Registration__c/fields/Amount__c.field-meta.xml
<CustomField>
    <fullName>Amount__c</fullName>
    <label>Amount (AED)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>