MODON MRE BPDEV/force-app/main/default/objects/EOI_Public_Registration__c/fields/AuthorizedEmail__c.field-meta.xml
<CustomField>
    <fullName>AuthorizedEmail__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Authorized Email</label>
    <type>Email</type>
</CustomField>