MODON MRE BPDEV/force-app/main/default/objects/EOI_Public_Registration__c/fields/AuthorizedPhone__c.field-meta.xml
<CustomField>
    <fullName>AuthorizedPhone__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Authorized Phone</label>
    <type>Phone</type>
</CustomField>