MODON MRE BPDEV/force-app/main/default/objects/EOI_Public_Registration__c/fields/BatchId__c.field-meta.xml
<CustomField>
    <fullName>BatchId__c</fullName>
    <description>Shared GUID linking the rows that came from a single public submission with multiple unit selections.</description>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Batch Id</label>
    <length>36</length>
    <type>Text</type>
</CustomField>