MODON MRE BPDEV/force-app/main/default/objects/EOI_Public_Registration__c/fields/CompanyName__c.field-meta.xml
<CustomField>
    <fullName>CompanyName__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Company Name</label>
    <length>120</length>
    <type>Text</type>
</CustomField>