MODON MRE BPDEV/force-app/main/default/objects/EOI_Public_Registration__c/fields/EmiratesId__c.field-meta.xml
<CustomField>
    <fullName>EmiratesId__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Emirates ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>