MODON MRE BPDEV/force-app/main/default/objects/EOI_Public_Registration__c/fields/EmiratesIdExpiryDate__c.field-meta.xml
<CustomField>
    <fullName>EmiratesIdExpiryDate__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Emirates ID Expiry Date</label>
    <type>Date</type>
</CustomField>