MODON MRE BPDEV/force-app/main/default/objects/EOI_Public_Registration__c/fields/EOI_Range__c.field-meta.xml
<CustomField>
    <fullName>EOI_Range__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>EOI Range</label>
    <referenceTo>EOI_Range__c</referenceTo>
    <relationshipLabel>EOI Public Registrations</relationshipLabel>
    <relationshipName>EOI_Public_Registrations</relationshipName>
    <type>Lookup</type>
</CustomField>