MODON MRE BPDEV/force-app/main/default/objects/EOI_Public_Registration__c/fields/EOI_Site_Payment__c.field-meta.xml
<CustomField>
    <fullName>EOI_Site_Payment__c</fullName>
    <description>Public EOI microsite pay-first: Reference__c of the Checkout_Payment__c whose capture wrote this staging row (one payment per residence type). The payment-to-rows join for visit consolidation, receipts and refund reconciliation; BatchId__c stays blank until the visit closes and promotes as one group. Set only by EOIService. (Aurelix)</description>
    <encryptionScheme>None</encryptionScheme>
    <label>EOI Site Payment</label>
    <length>40</length>
    <type>Text</type>
</CustomField>