MODON MRE BPDEV/force-app/main/default/objects/EOI_Public_Registration__c/fields/Identity_Key__c.field-meta.xml
<CustomField>
    <fullName>Identity_Key__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Identity Key</label>
    <length>64</length>
    <type>Text</type>
</CustomField>