MODON MRE BPDEV/force-app/main/default/objects/EOI_Public_Registration__c/fields/Is_Returning__c.field-meta.xml
<CustomField>
    <fullName>Is_Returning__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Returning</label>
    <type>Checkbox</type>
</CustomField>