MODON MRE BPDEV/force-app/main/default/objects/EOI_Public_Registration__c/fields/Locale__c.field-meta.xml
<CustomField>
    <fullName>Locale__c</fullName>
    <label>Locale</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>en_US</fullName>
                <default>true</default>
                <label>English</label>
            </value>
            <value>
                <fullName>ar</fullName>
                <label>Arabic</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>