MODON MRE BPDEV/force-app/main/default/objects/EOI_Public_Registration__c/fields/MatchedAccount__c.field-meta.xml
<CustomField>
    <fullName>MatchedAccount__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Matched Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Matched Public Registrations</relationshipLabel>
    <relationshipName>Matched_Public_Registrations</relationshipName>
    <type>Lookup</type>
</CustomField>