MODON MRE BPDEV/force-app/main/default/objects/EOI_Public_Registration__c/fields/MatchedContact__c.field-meta.xml
<CustomField>
    <fullName>MatchedContact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Matched Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Matched Public Registrations</relationshipLabel>
    <relationshipName>Matched_Public_Registrations</relationshipName>
    <type>Lookup</type>
</CustomField>