MODON MRE BPDEV/force-app/main/default/objects/EOI_Public_Registration__c/fields/MatchedLead__c.field-meta.xml
<CustomField>
    <fullName>MatchedLead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Matched Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Matched Public Registrations</relationshipLabel>
    <relationshipName>Matched_Public_Registrations</relationshipName>
    <type>Lookup</type>
</CustomField>