MODON MRE BPDEV/force-app/main/default/objects/EOI_Public_Registration__c/fields/PaymentTypePreference__c.field-meta.xml
<CustomField>
    <fullName>PaymentTypePreference__c</fullName>
    <label>Payment Type Preference</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cheque</fullName>
            </value>
            <value>
                <fullName>Bank Transfer</fullName>
            </value>
            <value>
                <fullName>Online</fullName>
            </value>
            <value>
                <fullName>Cheque Payment</fullName>
                <isActive>false</isActive>
                <label>Cheque Payment</label>
            </value>
            <value>
                <fullName>Online Payment</fullName>
                <isActive>false</isActive>
                <label>Online Payment</label>
            </value>
            <value>
                <fullName>POS Payment</fullName>
                <isActive>false</isActive>
                <label>POS Payment</label>
            </value>
            <value>
                <fullName>Pay by Cheque</fullName>
                <isActive>false</isActive>
                <label>Pay by Cheque</label>
            </value>
            <value>
                <fullName>Wire Transfer</fullName>
                <isActive>false</isActive>
                <label>Wire Transfer</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>