MODON MRE BPDEV/force-app/main/default/objects/EOI_Public_Registration__c/fields/Phase__c.field-meta.xml
<CustomField>
    <fullName>Phase__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Phase</label>
    <referenceTo>Phase__c</referenceTo>
    <relationshipLabel>EOI Public Registrations</relationshipLabel>
    <relationshipName>EOI_Public_Registrations</relationshipName>
    <type>Lookup</type>
</CustomField>