MODON MRE BPDEV/force-app/main/default/objects/EOI_Public_Registration__c/fields/Prior_Visit_Count__c.field-meta.xml
<CustomField>
    <fullName>Prior_Visit_Count__c</fullName>
    <label>Prior Visit Count</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>