MODON MRE BPDEV/force-app/main/default/objects/EOI_Public_Registration__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project</label>
    <referenceTo>Project__c</referenceTo>
    <relationshipLabel>EOI Public Registrations</relationshipLabel>
    <relationshipName>EOI_Public_Registrations</relationshipName>
    <type>Lookup</type>
</CustomField>