MODON MRE BPDEV/force-app/main/default/objects/EOI_Public_Registration__c/fields/PromotedAt__c.field-meta.xml
<CustomField>
    <fullName>PromotedAt__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Promoted At</label>
    <type>DateTime</type>
</CustomField>