MODON MRE BPDEV/force-app/main/default/objects/EOI_Public_Registration__c/fields/PromotedEOI__c.field-meta.xml
<CustomField>
    <fullName>PromotedEOI__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Promoted EOI</label>
    <referenceTo>Expressionofinterest__c</referenceTo>
    <relationshipLabel>Source Public Registrations</relationshipLabel>
    <relationshipName>Source_Public_Registrations</relationshipName>
    <type>Lookup</type>
</CustomField>