MODON MRE BPDEV/force-app/main/default/objects/EOI_Public_Registration__c/fields/Promotion_Error__c.field-meta.xml
<CustomField>
    <fullName>Promotion_Error__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Promotion Error</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>