MODON MRE BPDEV/force-app/main/default/objects/EOI_Public_Registration__c/fields/RegisteredEmail__c.field-meta.xml
<CustomField>
    <fullName>RegisteredEmail__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Registered Email</label>
    <type>Email</type>
</CustomField>