MODON MRE BPDEV/force-app/main/default/objects/EOI_Public_Registration__c/fields/RegisteredPhone__c.field-meta.xml
<CustomField>
    <fullName>RegisteredPhone__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Registered Phone</label>
    <type>Phone</type>
</CustomField>