MODON MRE BPDEV/force-app/main/default/objects/EOI_Public_Registration__c/fields/ResidentStatus__c.field-meta.xml
<CustomField>
    <fullName>ResidentStatus__c</fullName>
    <label>Resident Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Resident</fullName>
                <default>true</default>
                <label>Resident</label>
            </value>
            <value>
                <fullName>Non Resident</fullName>
            </value>
            <value>
                <fullName>UAE National</fullName>
                <isActive>false</isActive>
                <label>UAE National</label>
            </value>
            <value>
                <fullName>UAE Resident</fullName>
                <isActive>false</isActive>
                <label>UAE Resident</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>