MODON MRE BPDEV/force-app/main/default/objects/EOI_Public_Registration__c/fields/Session_Id__c.field-meta.xml
<CustomField>
    <fullName>Session_Id__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Session Id</label>
    <length>36</length>
    <type>Text</type>
</CustomField>