MODON MRE BPDEV/force-app/main/default/objects/EOI_Public_Registration__c/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <label>Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Public Microsite</fullName>
                <default>true</default>
                <label>Public Microsite</label>
            </value>
            <value>
                <fullName>Wadeem Microsite</fullName>
            </value>
            <value>
                <fullName>ADIB Microsite</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>