MODON MRE BPDEV/force-app/main/default/objects/EOI_Public_Registration__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
                <default>true</default>
                <label>New</label>
            </value>
            <value>
                <fullName>Verified</fullName>
            </value>
            <value>
                <fullName>Promoted</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Duplicate</fullName>
            </value>
            <value>
                <fullName>QuotaClosed</fullName>
                <label>Quota Closed</label>
            </value>
            <value>
                <fullName>PromoteFailed</fullName>
                <label>Promote Failed</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>