MODON MRE BPDEV/force-app/main/default/objects/EOI_Public_Registration__c/fields/SubmittedAt__c.field-meta.xml
<CustomField>
    <fullName>SubmittedAt__c</fullName>
    <defaultValue>NOW()</defaultValue>
    <encryptionScheme>None</encryptionScheme>
    <label>Submitted At</label>
    <type>DateTime</type>
</CustomField>