MODON MRE BPDEV/force-app/main/default/objects/EOI_Public_Registration__c/fields/TradeLicenseNumber__c.field-meta.xml
<CustomField>
    <fullName>TradeLicenseNumber__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Trade License Number</label>
    <length>40</length>
    <type>Text</type>
</CustomField>