MODON MRE BPDEV/force-app/main/default/objects/EOI_Public_Registration__c/fields/Typology__c.field-meta.xml
<CustomField>
    <fullName>Typology__c</fullName>
    <description>Par Typology selected by the user via the Par Typology microsite (Par 3 / Par 4).</description>
    <label>Typology</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Par 3</fullName>
            </value>
            <value>
                <fullName>Par 4</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>