MODON MRE BPDEV/force-app/main/default/objects/EOI_Public_Registration__c/fields/UnitType__c.field-meta.xml
<CustomField>
    <fullName>UnitType__c</fullName>
    <label>Unit Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Apartment</fullName>
            </value>
            <value>
                <fullName>Villa</fullName>
            </value>
            <value>
                <fullName>Townhouse</fullName>
            </value>
            <value>
                <fullName>Penthouse</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>