MODON MRE BPDEV/force-app/main/default/objects/EOI_Public_Registration__c/fields/UnitTypologyMRE__c.field-meta.xml
<CustomField>
    <fullName>UnitTypologyMRE__c</fullName>
    <label>Unit Typology</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Mild Unit Town Houses</fullName>
            </value>
            <value>
                <fullName>End Unit Town Houses</fullName>
            </value>
            <value>
                <fullName>Select Villas</fullName>
            </value>
            <value>
                <fullName>Second Row Villa</fullName>
            </value>
            <value>
                <fullName>Front Row Villa</fullName>
            </value>
            <value>
                <fullName>Front Row Premium Villa</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>