MODON MRE BPDEV/force-app/main/default/objects/EOI_Public_Registration__c/fields/UserAgent__c.field-meta.xml
<CustomField>
    <fullName>UserAgent__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>User Agent</label>
    <length>255</length>
    <type>Text</type>
</CustomField>