MODON MRE BPDEV/force-app/main/default/objects/EOI_Public_Registration__c/fields/UTMCampaign__c.field-meta.xml
<CustomField>
    <fullName>UTMCampaign__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>UTM Campaign</label>
    <length>255</length>
    <type>Text</type>
</CustomField>