MODON MRE BPDEV/force-app/main/default/objects/EOI_Public_Registration__c/fields/UTMSource__c.field-meta.xml
<CustomField>
    <fullName>UTMSource__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>UTM Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>