MODON MRE BPDEV/force-app/main/default/objects/EOI_Public_Registration__c/fields/VerificationRequest__c.field-meta.xml
<CustomField>
    <fullName>VerificationRequest__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Verification Request</label>
    <referenceTo>Verification_Request__c</referenceTo>
    <relationshipLabel>EOI Public Registrations</relationshipLabel>
    <relationshipName>EOI_Public_Registrations</relationshipName>
    <type>Lookup</type>
</CustomField>