MODON MRE BPDEV/force-app/main/default/objects/EOI_Public_Registration__c/fields/Verified_Identifier__c.field-meta.xml
<CustomField>
    <fullName>Verified_Identifier__c</fullName>
    <label>Verified Identifier</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Mobile</fullName>
            </value>
            <value>
                <fullName>UAE Pass</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>