MODON MRE BPDEV/force-app/main/default/objects/EOI_Public_Registration__c/fields/VerifiedAt__c.field-meta.xml
<CustomField>
    <fullName>VerifiedAt__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Verified At</label>
    <type>DateTime</type>
</CustomField>