MODON MRE BPDEV/force-app/main/default/objects/EOI_Public_Registration__c/fields/VerifiedChannel__c.field-meta.xml
<CustomField>
    <fullName>VerifiedChannel__c</fullName>
    <label>Verified Channel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>SMS</fullName>
            </value>
            <value>
                <fullName>UAEPass</fullName>
                <label>UAE Pass</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>