MODON MRE BPDEV/force-app/main/default/objects/EOI_Public_Registration__c/fields/Visitor__c.field-meta.xml
<CustomField>
    <fullName>Visitor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Visitor</label>
    <referenceTo>EOI_Site_Visitor__c</referenceTo>
    <relationshipLabel>Registrations</relationshipLabel>
    <relationshipName>Registrations</relationshipName>
    <type>Lookup</type>
</CustomField>